# Openmp-example

./: CMakeLists.txt
CMake/Modules/: GCCCVars.cmake  GCCCXXVars.cmake
sources/: CMakeLists.txt  main.c  parameters.txt  plot.gp  v1.Makefile  v2.Makefile
